2011-01-22  Richard Frith-Macdonald <rfm@gnu.org>

	* TestFramework/gnustep-tests.in:
	Report path to test file when we run it as suggested by Sergey Golovin.

2011-01-22  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: Check for bash and test programs
	* configure: regenerate
	* TestFramework/gnustep-tests: remove ... use gnustep-test.in
	* TestFramework/gnustep-tests.in:
	Use bash as our shell if possible, and use an external test program
	determined at configure time if we can't rely on the builtin test
	function in the shell we end up with.

2011-01-22  Richard Frith-Macdonald <rfm@gnu.org>

	* TestFramework/gnustep-tests:
	* TestFramework/Testing.h:
	* TestFramework/README:
	Make it easy to break at the start of a particular failed test.
	Add --debug option to automatically launch gdb to debug a test.

2011-01-21  Richard Frith-Macdonald <rfm@gnu.org>

	* TestFramework/gnustep-tests:
	* TestFramework/Summary.sh:
	* TestFramework/runtest.sh:
	* GNUmakefile.in:
	Simplify by removing intermediary script.

2011-01-21  Richard Frith-Macdonald <rfm@gnu.org>

	* gnustep-config.in: Add CC to list of variables so we can build
	using the compiler that gnustep-make was configured with.
	* TestFramework/gnustep-tests:
	* TestFramework/runtest.sh:
	Add David Chisnall's suggested performance optimisation of handling
	simple cases (where we just need to compile a single source file
	with no special options) by compiling directly ... 25% improvement
	running the base library testsuite on my debian system using clang.

2011-01-20  Richard Frith-Macdonald <rfm@gnu.org>

	* TestFramework/gnustep-tests:
	* TestFramework/README:
	Simplify ... permit only one test file as an argument, so that we can
	infer a single test directory easily (the directory containing the
	file) and thus use the standard code path in which we execute Start.sh
	and End.sh and run GNUmakefile.tests in the directory containing the
	file ... ie so that behavior when executing a single test file is